<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <string name="app_name">시켜시켜</string>

    <string-array name="category_arr">
        <item>전체</item>
        <item>치킨</item>
        <item>중식</item>
        <item>피자</item>
        <item>족발/보쌈</item>
        <item>한식/분식</item>
        <item>야식</item>
        <item>일식/돈까스</item>
        <item>도시락/죽</item>
        <item>기타</item>
    </string-array>
    <string-array name="user_mobile">
        <item>010</item>
        <item>011</item>
        <item>016</item>
        <item>019</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    
    <string name="action_search">찾기</string>
   
    <string name="title_cart">장바구니</string>
    <string name="title_add_user">회원가입</string>
    <string name="title_order">주문하기</string>
    <string name="title_selectorder">주문표</string>
    <string name="title_join_login">회원가입/로그인</string>
    <string name="title_customer">고객센터</string>
    <string name="title_event">이벤트</string>
    <string name="title_setting">세팅</string>
    <string name="title_myhistory">내 주문내역</string>
    <string name="menu">메뉴</string>
    <string name="loc">배송지 | </string>
    <string name="otheraddr">다른배송지</string>
    <string name="addr">배송지를 등록 하세요.</string>
    <string name="check_sms"> SMS 수신 동의</string>
    <string name="check_email"> 이메일 수신 동의</string>
    <string name="check_agree1"> 이용약관 및 청소년 보호정책에 동의 합니다.</string>
    <string name="check_agree2"> 개인정보 수집 및 이용에 동의 합니다.</string>
    <string name="adduser_tv1"> * 서비스 제공에 필요한 최소한의 정보 이외의 개인정보 수집에 대하여는 동의하지 않을 수 있으며, 이 경우 일부 서비스의 제공이 제한 될 수 있습니다.</string>
    <string name="adduser_tv2"> * 만 14세 미만은 가입하실 수 없습니다.</string>
    <string name="menu_insert">메뉴추가</string>
    <string name="category">카테고리</string>
    <string name="title_send_order">주문하기</string>
    <string name="data_service">고객님께서 가입하신 요금제에 따라 데이터 요금이 부과될 수 있습니다.</string>
    <string name="net_error">네트워크가 연결 되지 않았습니다. 네트워크를 확인해 주세요.</string>
<string name="gps_check">정확한 위치서비스를 위해서 GPS를 사용합니다.</string>
</resources>